# Code

./: .gitignore  .gitmodules  Claude  Code.code-workspace  Experiment_data.ipynb  LICENSE  Packer.py  README.md  Transcript4CES_Intel.txt  WolframKeyGen.html  Women2018_Kindergarten.csv  audio_calibration.ipynb  backup.txt  blender-agent-system-prompt.md  calculate_imaged_brightness.mlx  county_code.csv  crash_report.txt  desktop.ini  imaging.ipynb  kids_num.CSV  local_favorite.db  matlab.ipynb  matlabInVSCodeVariableInfo.csv  moth-eye.ipynb  output_kindergarten.csv  run_kagome_simulation.py  tes.py  test.ipynb  women2018 copy.ipynb  women2018.ipynb  women2018_new.csv  脚本.js
Phys-188/Code_clone/Office-Word-MCP-Server/: .env.example  Dockerfile  LICENSE  README.copilot-integration.md  README.md  __init__.py  clean_openmcp_settings.py  mcp-config.template.json  merge_vscode_settings.py  pyproject.toml  requirements.txt  setup_mcp.py  smithery.yaml  vscode_mcp.json  vscode_settings_snippet.txt  wolframalpha_mcp_server.py  word_mcp_server.py
Phys-188/Code_clone/Office-Word-MCP-Server/office_word_mcp_server/: __init__.py
Phys-188/Code_clone/Office-Word-MCP-Server/word_document_server/: __init__.py  main.py
Phys-188/Code_clone/Office-Word-MCP-Server/word_document_server/core/: __init__.py  comments.py  footnotes.py  protection.py  styles.py  tables.py  unprotect.py
Phys-188/Code_clone/Office-Word-MCP-Server/word_document_server/tools/: __init__.py  comment_tools.py  content_tools.py  document_tools.py  extended_document_tools.py  footnote_tools.py  format_tools.py  (+1 more)
(+1257 files in other folders)
